0
- Update to 2.17.22

8
- Update to 2.14.17
- Add python-telegram-bot

7
- Update to 2.13.0

6
- Update to 2.12.10

5
- Update to 2.12.7
- Add deluge
- Add mechanize
- Fix flexget.ctl

4
- Update to 2.11.9
- Add transmissionrpc

3
- Update to 2.11.6
- Rework Python

2
- Fix default config.yml

1
- Initial add-on